--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
 pybind11
 
 --find-links https://download.pytorch.org/whl/torch_stable.html
-torch==2.1.0+cu118
-torchvision==0.16.0+cu118
+torch==2.1.2+cu121
+torchvision==0.16.2+cu121
 
 six
 regex
 numpy
 
-deepspeed
 wandb
 tensorboard
 
 # mpirun
 mpi4py
 
-# tokenizer v2
+# tokenizer
 sentencepiece
 
 # tokenize
